--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 <ul class="ul1">
   <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 3.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 3.</span></li>
+  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 4</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 4.</span></p>
