--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000e9; -webkit-text-stroke: #0000e9}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000e3; -webkit-text-stroke: #0000e3}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
-    span.s3 {font-kerning: none; color: #000000; -webkit-text-stroke: 0px #000000}
+    span.s3 {font-kerning: none; -webkit-text-stroke: 0px #000000}
     span.s4 {-webkit-text-stroke: 0px #000000}
     ul.ul1 {list-style-type: disc}
   </style>
@@ -35,12 +35,13 @@
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p4"><span class="s1">Code snippet in Section 2.</span></p>
 <ul class="ul1">
   <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 2.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 3</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 3.</span></p>
@@ -49,8 +50,8 @@
 <ul class="ul1">
   <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 3.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 3.</span></li>
-  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 4</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 4.</span></p>
