--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
+    li.li5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
     span.s3 {font-kerning: none; -webkit-text-stroke: 0px #000000}
@@ -43,6 +44,7 @@
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
   <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li5"><span class="s1">List item 2 in Section 2.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 3</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 3.</span></p>
