--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000d3; -webkit-text-stroke: #0000d3}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000c9; -webkit-text-stroke: #0000c9}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    li.li5 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
     span.s3 {font-kerning: none; -webkit-text-stroke: 0px #000000}
@@ -22,7 +21,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1">Documentation</span></p>
-<p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5</span></p>
+<p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 6<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 7</span></p>
 <p class="p1"><span class="s1">Section 1</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 1.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 1.</span></p>
@@ -43,8 +42,8 @@
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li5"><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
+  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 3</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 3.</span></p>
