--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 6<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 7</span></p>
 <p class="p1"><span class="s1">Section 1</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 1.Paragraph 1 in Section 1.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 1.</span></p>
+<p class="p3"><span class="s1">Paragraph 2 in Section 1.Paragraph 1 in Section 1.</span></p>
 <p class="p4"><span class="s1">Code snippet in Section 1.</span></p>
 <ul class="ul1">
   <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 1.</span></li>
