--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000bd; -webkit-text-stroke: #0000bd}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #0000af; -webkit-text-stroke: #0000af}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
@@ -21,7 +21,7 @@
 </head>
 <body>
 <p class="p1"><span class="s1">Documentation</span></p>
-<p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 6<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 7</span></p>
+<p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 6<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 7 Section 7</span></p>
 <p class="p1"><span class="s1">Section 1</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 1.Paragraph 1 in Section 1.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 1.Paragraph 1 in Section 1.</span></p>
