--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #00009f; -webkit-text-stroke: #00009f}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #00008d; -webkit-text-stroke: #00008d}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
-    p.p5 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     span.s1 {font-kerning: none}
     span.s2 {text-decoration: underline ; font-kerning: none}
@@ -33,8 +32,9 @@
 </ul>
 <p class="p1"><span class="s1">Section 2</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p5"><span class="s1">Paragraph 1 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
