--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p4"><span class="s1">Code snippet in Section 2.</span></p>
 <ul class="ul1">
   <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 2.</span></li>
