--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <p class="p1"><span class="s1">Section 2</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
+<p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
