--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000054; -webkit-text-stroke: #000054}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #000042; -webkit-text-stroke: #000042}
     p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
     li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
@@ -31,6 +31,7 @@
   <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 1.</span></li>
 </ul>
 <p class="p1"><span class="s1">Section 2</span></p>
+<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
 <p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
