--- a/index.html
+++ b/index.html
@@ -8,91 +8,60 @@
   <meta name="CocoaVersion" content="2487.6">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; color: #00000e; -webkit-text-stroke: #00000e}
-    p.p3 {margin: 0.0px 0.0px 12.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
-    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.0px Menlo; -webkit-text-stroke: #000000}
-    li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Times; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
-    span.s2 {text-decoration: underline ; font-kerning: none}
-    span.s3 {font-kerning: none; -webkit-text-stroke: 0px #000000}
-    span.s4 {-webkit-text-stroke: 0px #000000}
-    ul.ul1 {list-style-type: disc}
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">Documentation</span></p>
-<p class="p2"><span class="s2">Section 1</span><span class="s3"> </span><span class="s2">Section 2</span><span class="s3"> </span><span class="s2">Section 3</span><span class="s3"> </span><span class="s2">Section 4</span><span class="s3"> </span><span class="s2">Section 5<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 6<span class="Apple-converted-space"> </span></span><span class="s3"> </span><span class="s2">Section 7 Section 7</span></p>
-<p class="p1"><span class="s1">Section 1</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 1.Paragraph 1 in Section 1.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 1.Paragraph 1 in Section 1.</span></p>
-<p class="p4"><span class="s1">Code snippet in Section 1.</span></p>
-<ul class="ul1">
-  <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 1.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 1.</span></li>
-</ul>
-<p class="p1"><span class="s1">Section 2</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 2..</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 2.</span></p>
-<p class="p4"><span class="s1">Code snippet in Section 2.</span></p>
-<ul class="ul1">
-  <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-</ul>
-<p class="p1"><span class="s1">Section 3</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 3.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 3.</span></p>
-<p class="p4"><span class="s1">Code snippet in Section 3.</span></p>
-<ul class="ul1">
-  <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 3.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 3.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 2.</span></li>
-</ul>
-<p class="p1"><span class="s1">Section 4</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 4.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 4.</span></p>
-<p class="p4"><span class="s1">Code snippet in Section 4.</span></p>
-<ul class="ul1">
-  <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 4.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 4.</span></li>
-</ul>
-<p class="p1"><span class="s1">Section 5</span></p>
-<p class="p3"><span class="s1">Paragraph 1 in Section 5.</span></p>
-<p class="p3"><span class="s1">Paragraph 2 in Section 5.</span></p>
-<p class="p4"><span class="s1">Code snippet in Section 5.</span></p>
-<ul class="ul1">
-  <li class="li1"><span class="s4"></span><span class="s1">List item 1 in Section 5.</span></li>
-  <li class="li1"><span class="s4"></span><span class="s1">List item 2 in Section 5.</span></li>
-</ul>
+<p class="p1"><span class="s1">&lt;!DOCTYPE html&gt;</span></p>
+<p class="p1"><span class="s1">&lt;html&gt;</span></p>
+<p class="p1"><span class="s1">&lt;head&gt;</span></p>
+<p class="p1"><span class="s1">&lt;title&gt;Page Title&lt;/title&gt;</span></p>
+<p class="p1"><span class="s1">&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"&gt;&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>$(document).ready(function() {</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").css("color", "red");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").prop("disabled", true);</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target4").remove();</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target2").appendTo("#right-well");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target5").clone().appendTo("#left-well");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").parent().css("background-color", "red");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#right-well").children().css("color", "orange");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#left-well").children().css("color", "green");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$(".target:nth-child(2)").addClass("animated bounce");</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$(".target:even").addClass("animated shake");</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>});</span></p>
+<p class="p1"><span class="s1">&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/head&gt;</span></p>
+<p class="p1"><span class="s1">&lt;body&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">&lt;div class="container-fluid"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;h3 class="text-primary text-center"&gt;jQuery Playground&lt;/h3&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;div class="row"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;div class="col-xs-6"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;h4&gt;#left-well&lt;/h4&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;div class="well" id="left-well"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target1"&gt;#target1&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target2"&gt;#target2&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target3"&gt;#target3&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;div class="col-xs-6"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;h4&gt;#right-well&lt;/h4&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;div class="well" id="right-well"&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target4"&gt;#target4&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target5"&gt;#target5&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">        </span>&lt;button class="btn btn-default target" id="target6"&gt;#target6&lt;/button&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">      </span>&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/div&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p1"><span class="s1">&lt;/body&gt;</span></p>
+<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
+<p class="p2"><span class="s1"></span><br></p>
+<p class="p2"><span class="s1"></span><br></p>
 </body>
 </html>
