--- a/index.html
+++ b/index.html
@@ -19,21 +19,7 @@
 <p class="p1"><span class="s1">&lt;title&gt;Page Title&lt;/title&gt;</span></p>
 <p class="p1"><span class="s1">&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"&gt;</span></p>
 <p class="p1"><span class="s1">&lt;script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"&gt;&lt;/script&gt;</span></p>
-<p class="p1"><span class="s1">&lt;script&gt;</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>$(document).ready(function() {</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").css("color", "red");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").prop("disabled", true);</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target4").remove();</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target2").appendTo("#right-well");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target5").clone().appendTo("#left-well");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#target1").parent().css("background-color", "red");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#right-well").children().css("color", "orange");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$("#left-well").children().css("color", "green");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$(".target:nth-child(2)").addClass("animated bounce");</span></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">    </span>$(".target:even").addClass("animated shake");</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1"><span class="Apple-converted-space">  </span>});</span></p>
-<p class="p1"><span class="s1">&lt;/script&gt;</span></p>
+<p class="p1"><span class="s1">&lt;script src=“./js/jquery.js”&gt;&lt;/script&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/head&gt;</span></p>
 <p class="p1"><span class="s1">&lt;body&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
