code on index & style page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Practice</title>
+    <link rel="stylesheet" href="style.css" />
+    <script></script>
   </head>
   <body>
-    <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <div class="container">
+      <div class="nav">
+        <div class="logo"><p>Logo</p></div>
+        <div class="navlinks">
+          <ul>
+            <li>link1</li>
+            <li>link2</li>
+            <li>link3</li>
+          </ul>
+        </div>
+        <div class="profilemenu">
+          <p class="username">Profile name</p>
+          <p class="profile-pic">\/</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <p>My first paragraph.</p> -->
   </body>
 </html>
