--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- #nav start -->
       <div class="nav">
         <div class="logo"><p>Logo</p></div>
         <div class="navlinks">
@@ -23,6 +24,61 @@
           <p class="profile-pic">\/</p>
         </div>
       </div>
+      <!-- #nav end -->
+      <!-- #hero start -->
+      <div class="hero center-section">
+        <img class="img" src="" alt="hero-img" srcset="" />
+        <p class="image-text"></p>
+      </div>
+      <!-- #hero end -->
+
+      <!-- #s2 two section start -->
+      <div class="center-section">
+        <p class="center">two section</p>
+      </div>
+      <!-- #s2 two section end -->
+
+      <!-- #s3 products start -->
+      <div class="center-section">
+        <p class="center">products</p>
+      </div>
+      <!-- #s3 products end -->
+
+      <!-- #s4 about start -->
+      <div class="center-section">
+        <p class="center">about</p>
+      </div>
+      <!-- #s4 about end -->
+
+       <!-- #s4 gallary start -->
+       <div class="center-section">
+        <p class="center">gallary</p>
+      </div>
+      <!-- #s4 gallary end -->
+
+       <!-- #s4 carosial start -->
+       <div class="center-section">
+        <p class="center">carosial</p>
+      </div>
+      <!-- #s4 carosial end -->
+
+      <!-- #s4 testimonials start -->
+      <div class="center-section">
+        <p class="center">testimonials</p>
+      </div>
+      <!-- #s4 testimonials end -->
+       
+      <!-- #s4 contact us start -->
+      <div class="center-section">
+        <p class="center">contact us</p>
+      </div>
+      <!-- #s4 contact us end -->
+
+      <!-- #s4 footer start -->
+      <div class="center-section">
+        <p class="center">footer</p>
+      </div>
+      <!-- #s4 footer end -->
     </div>
 
     <!-- <p>My first paragraph.</p> -->
