code on index & style page

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="container">
       <!-- #nav start -->
       <div class="nav">
-        <div class="logo"><p>Logo</p></div>
+        <div class="logo">
+          <img class="img" src="./images/logo.png" alt="hero-img" srcset="" />
+          <p>Flex Helper</p>
+        </div>
         <div class="navlinks">
           <ul>
             <li>link1</li>
@@ -27,20 +30,33 @@
       <!-- #nav end -->
       <!-- #hero start -->
       <div class="hero center-section">
-        <img class="img" src="" alt="hero-img" srcset="" />
-        <p class="image-text"></p>
+        <img class="img" src="images/hero.png" alt="hero-img" srcset="" />
+        <p class="image-text">This is para</p>
       </div>
       <!-- #hero end -->
 
       <!-- #s2 two section start -->
-      <div class="center-section">
-        <p class="center">two section</p>
+      <div class="two-section center-section">
+        <div class="left-section">
+          <p class="">left section</p>
+        </div>
+        <div class="right-section">
+          <p class="">right section</p>
+        </div>
       </div>
       <!-- #s2 two section end -->
 
       <!-- #s3 products start -->
-      <div class="center-section">
-        <p class="center">products</p>
+      <div class="products center-section">
+        <div class="prod product-1">
+          <p class="">product 1</p>
+        </div>
+        <div class="prod product-2">
+          <p class="">product 2</p>
+        </div>
+        <div class="prod product-3">
+          <p class="">product 3</p>
+        </div>
       </div>
       <!-- #s3 products end -->
 
@@ -50,14 +66,14 @@
       </div>
       <!-- #s4 about end -->
 
-       <!-- #s4 gallary start -->
-       <div class="center-section">
+      <!-- #s4 gallary start -->
+      <div class="center-section">
         <p class="center">gallary</p>
       </div>
       <!-- #s4 gallary end -->
 
-       <!-- #s4 carosial start -->
-       <div class="center-section">
+      <!-- #s4 carosial start -->
+      <div class="center-section">
         <p class="center">carosial</p>
       </div>
       <!-- #s4 carosial end -->
@@ -67,7 +83,7 @@
         <p class="center">testimonials</p>
       </div>
       <!-- #s4 testimonials end -->
-       
+
       <!-- #s4 contact us start -->
       <div class="center-section">
         <p class="center">contact us</p>
@@ -75,9 +91,9 @@
       <!-- #s4 contact us end -->
 
       <!-- #s4 footer start -->
-      <div class="center-section">
+      <footer class="center-section">
         <p class="center">footer</p>
-      </div>
+      </footer>
       <!-- #s4 footer end -->
     </div>
 
