code on index & style page

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
         </div>
       </div>
       <!-- #nav end -->
+
       <!-- #hero start -->
       <div class="hero center-section">
         <img class="img" src="images/hero.png" alt="hero-img" srcset="" />
-        <p class="image-text">This is para</p>
+        <p class="image-text">This is HERO section</p>
       </div>
       <!-- #hero end -->
 
