code on index & style page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 
       <!-- #s4 about start -->
       <div class="center-section">
-        <p class="center">about</p>
+        <h1 class="">about</h1>
+        <p class="">This is all about the company details and envoirnments</p>
       </div>
       <!-- #s4 about end -->
 
