code on index & style page

--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
       <!-- #s4 testimonials start -->
       <div class="center-section">
         <p class="center">testimonials</p>
+        <div class="cards">
+            <div class="row">
+              <div class="column">1</div>
+              <div class="column">2</div>
+              <div class="column">3</div>
+            </div>
+        </div>
       </div>
       <!-- #s4 testimonials end -->
 
