--- a/index.html
+++ b/index.html
@@ -85,9 +85,23 @@
         <p class="center">testimonials</p>
         <div class="cards">
             <div class="row">
-              <div class="column">1</div>
-              <div class="column">2</div>
-              <div class="column">3</div>
+              <div class="column">
+                <div class="card">
+                  <h3>Card 1</h3>
+                  <p>Some text</p>
+                  <p>Some text</p>
+                </div>
+                <div class="card">
+                  <h3>Card 2</h3>
+                  <p>Some text</p>
+                  <p>Some text</p>
+                </div>
+                <div class="card">
+                  <h3>Card 3</h3>
+                  <p>Some text</p>
+                  <p>Some text</p>
+                </div>
+              </div>
             </div>
         </div>
       </div>
